# discord-bot-cpp

./: CMakeLists.txt  README.md  config.json  main.cpp
